# fysiki_glossa

./: README.md  pyproject.toml  pyvenv.cfg
Scripts/: activate  activate.bat  activate.fish  activate.nu
src/: main.py
src/analysis/: embeddings.py  preprocess.py  visualize.py
src/util/: texts.py
src/util/pipelines/: custom_rewriter.py  huggingface_rewriter.py  similarity.py  textattack_rewriter.py
