[project]
name = "fysiki-glossa"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
	"spacy>=3.8.5,<4.0.0",
	"nltk (>=3.9.1,<4.0.0)",
	"scikit-learn (>=1.6.1,<2.0.0)",
	"sentence-transformers (>=4.1.0,<5.0.0)",
	"transformers (>=4.51.3,<5.0.0)",
	"language-tool-python (>=2.9.3,<3.0.0)",
	"tiktoken (>=0.9.0,<0.10.0)",
	"protobuf (>=6.31.1,<7.0.0)",
	"blobfile (>=3.0.0,<4.0.0)",
	"sentencepiece (>=0.2.0,<0.3.0)",
	"gensim (>=4.3.3,<5.0.0)",
	"matplotlib (>=3.10.3,<4.0.0)",
	"huggingface-hub[hf-xet] (>=0.33.0,<0.34.0)",
	"textblob (>=0.19.0,<0.20.0)",
	"seaborn (>=0.13.2,<0.14.0)",
	"textattack (>=0.3.10,<0.4.0)"
]

[tool.poetry]
packages = [{include = "fysiki_glossa", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
